--- a/collapse.html
+++ b/collapse.html
@@ -10,6 +10,7 @@
             *::after {
                 box-sizing: border-box;
             }
+
             body,
             h1,
             h2,
@@ -22,29 +23,33 @@
             dd {
                 margin: 0;
             }
+
             .wrapper {
                 display: grid;
                 grid-template-columns: 1fr min(99ch, 100%) 1fr;
             }
+
             .wrapper > * {
                 grid-column: 2;
             }
+
             .full-bleed {
                 width: 100%;
                 grid-column: 1 / 4;
             }
+
             .full-bleed {
                 width: 100%;
                 grid-column: 1 / 4;
             }
+
             body {
                 min-height: 100vh;
                 scroll-behavior: smooth;
                 text-rendering: optimizeSpeed;
                 line-height: 1.5;
-                font-family: system-ui, -apple-system, BlinkMacSystemFont,
-                    'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
-                    'Helvetica Neue', sans-serif;
+                font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
+                    'Open Sans', 'Helvetica Neue', sans-serif;
 
                 font-size: 16px;
             }
@@ -62,7 +67,7 @@
                 margin-block: 4rem;
             }
 
-            button.accordian {
+            button.accordion {
                 background-color: transparent;
                 color: #354153;
                 cursor: pointer;
@@ -74,35 +79,29 @@
                 transition: 0.4s ease-in-out;
                 font-size: 1rem;
                 font-weight: 600;
-            }
-
-            button.accordian:after {
-                content: '\002B';
-                color: inherit;
-                font-weight: bold;
-                float: right;
-                margin-left: 5px;
-                transition: 0.4s ease-in-out;
-                font-size: inherit;
-                border: 2px solid #354153;
-                border-radius: 50%;
-                width: 1.5rem;
-                height: 1.5rem;
                 display: flex;
-                justify-content: center;
+                justify-content: space-between;
                 align-items: center;
             }
-
-            button.accordian.active:after {
-                transform: rotate(45deg);
-                transition: 0.4s;
+            button.accordion > * {
+                pointer-events: none;
             }
 
-            button.accordian.active,
-            button.accordian:hover {
+            button.accordion.active,
+            button.accordion:hover {
                 background-color: rgb(246, 246, 246);
-                transition: 0.4s;
+                transition: 0.15s;
             }
+            /* animate icon rotation */
+            button.accordion.active > .accordion-summary-icon {
+                transform: rotate(90deg);
+                transition: 0.15s;
+            }
+            .accordion-summary-icon {
+                transition: 0.15s ease-in-out;
+            }
+
+            /* animate details */
 
             div.panel {
                 padding: 0 18px;
@@ -121,6 +120,7 @@
         </style>
         <title>Document</title>
     </head>
+
     <body>
         <main class="wrapper">
             <header class="heading">
@@ -129,46 +129,100 @@
             </header>
             <section class="container">
                 <article class="faq">
-                    <button class="accordian" aria-labelledby="panel1">
-                        How much does it cost?
+                    <button class="accordion" aria-labelledby="panel1">
+                        <span class="accordion-summary-text"> What is the cost of the course?</span>
+
+                        <!-- https://feathericons.dev/?search=chevron-right&iconset=feather -->
+                        <svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            viewBox="0 0 24 24"
+                            width="24"
+                            height="24"
+                            class="accordion-summary-icon"
+                            fill="none"
+                            stroke="currentColor"
+                            stroke-linecap="round"
+                            stroke-linejoin="round"
+                            stroke-width="2"
+                        >
+                            <polyline points="9 18 15 12 9 6" />
+                        </svg>
                     </button>
-                    <div class="panel" id="panel1">
+                    <div class="panel accordion-details" id="panel1">
                         <p>
-                            The cost of the course is $199.99. This includes all
-                            of the course materials, as well as access to the
-                            private Facebook group. You will also receive a
-                            certificate of completion upon completion of the
-                            course.
+                            The cost of the course is $199.99. This includes all of the course materials, as well as
+                            access to the private Facebook group. You will also receive a certificate of completion upon
+                            completion of the course.
                         </p>
                     </div>
                 </article>
                 <article class="faq">
-                    <button class="accordian" aria-labelledby="panel2">
-                        Is there a free trial available?
+                    <button class="accordion" aria-labelledby="panel2">
+                        <span class="accordion-summary-text">Do you offer a free trial?</span>
+                        <svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            viewBox="0 0 24 24"
+                            width="24"
+                            height="24"
+                            class="accordion-summary-icon"
+                            fill="none"
+                            stroke="currentColor"
+                            stroke-linecap="round"
+                            stroke-linejoin="round"
+                            stroke-width="2"
+                        >
+                            <polyline points="9 18 15 12 9 6" />
+                        </svg>
                     </button>
                     <div class="panel" id="panel2">
                         <p>
-                            Yes! We offer a free trial of the course for 7 days.
-                            You can sign up for the free trial
+                            Yes! We offer a free trial of the course for 7 days. You can sign up for the free trial
                             <a href="#">here</a>.
                         </p>
                     </div>
                 </article>
                 <article class="faq">
-                    <button class="accordian" aria-labelledby="panel3">
-                        Can I cancel my subscription?
+                    <button class="accordion" aria-labelledby="panel3">
+                        <span class="accordion-summary-text">Can I cancel my subscription?</span>
+                        <svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            viewBox="0 0 24 24"
+                            width="24"
+                            height="24"
+                            class="accordion-summary-icon"
+                            fill="none"
+                            stroke="currentColor"
+                            stroke-linecap="round"
+                            stroke-linejoin="round"
+                            stroke-width="2"
+                        >
+                            <polyline points="9 18 15 12 9 6" />
+                        </svg>
                     </button>
                     <div class="panel" id="panel3">
                         <p>
-                            Yes! You can cancel your subscription at any time.
-                            To cancel your subscription, please
+                            Yes! You can cancel your subscription at any time. To cancel your subscription, please
                             <a href="#">click here</a>.
                         </p>
                     </div>
                 </article>
                 <article class="faq">
-                    <button class="accordian" aria-labelledby="panel4">
-                        What if I have more questions?
+                    <button class="accordion" aria-labelledby="panel4">
+                        <span class="accordion-summary-text">Do you offer a money back guarantee?</span>
+                        <svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            viewBox="0 0 24 24"
+                            width="24"
+                            height="24"
+                            class="accordion-summary-icon"
+                            fill="none"
+                            stroke="currentColor"
+                            stroke-linecap="round"
+                            stroke-linejoin="round"
+                            stroke-width="2"
+                        >
+                            <polyline points="9 18 15 12 9 6" />
+                        </svg>
                     </button>
                     <div class="panel" id="panel4">
                         <p>
@@ -181,13 +235,11 @@
         </main>
 
         <script>
-            const accordianButtons = document.querySelectorAll('.accordian');
+            const accordionButtons = document.querySelectorAll('.accordion');
 
-            accordianButtons.forEach((button) => {
+            accordionButtons.forEach((button) => {
                 button.addEventListener('click', (e) => {
-                    const panel = document.getElementById(
-                        e.target.getAttribute('aria-labelledby')
-                    );
+                    const panel = document.getElementById(e.target.getAttribute('aria-labelledby'));
                     button.classList.toggle('active');
 
                     if (panel.style.maxHeight) {
